11/30 tour.detail 프로필사진

--- a/Project03/src/main/webapp/resources/theme/css/templatemo_style.css
+++ b/Project03/src/main/webapp/resources/theme/css/templatemo_style.css
@@ -257,7 +257,7 @@ hr {
   position: fixed;
   width: 100%;
   margin: 0 auto;
-
+z-index:1000;
   top: 94px;
   -webkit-transition: all 150ms ease-in-out;
   -moz-transition: all 150ms ease-in-out;
