--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -37,7 +37,26 @@
 	</div>
 
 <script>
-$(document).ready(function() {
+$('#btnMemberRegister').click(function() {
+	location = '/project03/member/member_register01';
+});
+
+$('#btnLogin').click(function() {
+	location = '/project03/member/login';
+});
+
+$('#btnAdministrator').click(function() {
+	location = '/project03/';
+});
+
+$('#btnMypage').click(function() {
+	location = '/project03/';
+});	
+
+$('#btnLogout').click(function() {
+	location = '/project03/member/logout'; //logout 이라는 컨트롤러로 가겠다.
+});
+/* $(document).ready(function() {
 	$('#btnMemberRegister').click(function() {
 		location = '/project03/member/member_register01';
 	});
@@ -58,7 +77,7 @@ $(document).ready(function() {
 		location = '/project03/member/logout'; //logout 이라는 컨트롤러로 가겠다.
 	});
 	
-});
+}); */
 </script>	
 </body>
 </html>
