--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -46,9 +46,9 @@ $(document).ready(function() {
 		location = '/project03/member/login';
 	});
 	
-	$('btnAdministrator').click(function() {
-		location = '/project03/';
-	})
+	$('#btnAdministrator').click(function() {
+		location = '/project03/admin';
+	});
 	
 	$('#btnMypage').click(function() {
 		location = '/project03/';
