--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -15,9 +15,11 @@
 </style>
 </head>
 <body>
-	<div class="site-main" style="height: 14%;">
+	<div class="site-main" style="height: 13%;">
 		<b>같이가자</b>
 		<div id="mini_header">
+			<button id="btnHome">홈</button>
+			
 			<c:if test="${empty login_id }">
 				<%-- 세션에 로그인 정보가 없는 경우 --%>
 				<button id="btnMemberRegister">회원가입</button>
@@ -28,7 +30,7 @@
 			<c:if test="${not empty login_id }">
 				<%-- 세션에 로그인 정보가 있는 경우 --%>
 				<c:if test="${authority == 3 }">
-				<button id="btnAdministrator">관리자</button>
+					<button id="btnAdministrator">관리자</button>
 				</c:if>
 				<button id="btnMypage">마이페이지</button>		
 				<button id="btnLogout">로그아웃</button><br/>
@@ -46,16 +48,20 @@ $('#btnLogin').click(function() {
 });
 
 $('#btnAdministrator').click(function() {
-	location = '/project03/';
+	location = '/project03/admin';
 });
 
 $('#btnMypage').click(function() {
-	location = '/project03/';
+	location = '/project03/MyPage';
 });	
 
 $('#btnLogout').click(function() {
 	location = '/project03/member/logout'; //logout 이라는 컨트롤러로 가겠다.
 });
+
+$('#btnHome').click(function() {
+	location = '/project03/';
+});	
 /* $(document).ready(function() {
 	$('#btnMemberRegister').click(function() {
 		location = '/project03/member/member_register01';
