--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -15,15 +15,14 @@
 </style>
 </head>
 <body>
-	<div class="site-main" style="height: 13%;">
-		<b>같이가자</b>
+	<div class="site-main" style="height: 15%;">
 		<div id="mini_header">
-			<button id="btnHome">홈</button>
+			<button id="btnHome" style="height: 40%;">홈</button>
 			
 			<c:if test="${empty login_id }">
 				<%-- 세션에 로그인 정보가 없는 경우 --%>
-				<button id="btnMemberRegister">회원가입</button>
-				<button id="btnLogin">로그인</button>
+				<button id="btnMemberRegister" style="height: 40%;">회원가입</button>
+				<button id="btnLogin" style="height: 40%;">로그인</button>
 	
 			</c:if>
 			
@@ -32,8 +31,8 @@
 				<c:if test="${authority == 3 }">
 					<button id="btnAdministrator">관리자</button>
 				</c:if>
-				<button id="btnMypage">마이페이지</button>		
-				<button id="btnLogout">로그아웃</button><br/>
+				<button id="btnMypage" style="height: 40%;">마이페이지</button>		
+				<button id="btnLogout" style="height: 40%;">로그아웃</button><br/>
 			</c:if>	
 		</div>		
 	</div>
