--- a/Project03/src/main/webapp/resources/theme/css/mystyle1.css
+++ b/Project03/src/main/webapp/resources/theme/css/mystyle1.css
@@ -14,9 +14,11 @@ body {
 }
 
 
-#top {
-	background-color: #33cc33;
-	color: white;
+#top1 {
+	
+		background-image: url("../resources/theme/images/slide1.jpg");
+		background-size: 100%;
+		background-repeat: no-repeat;
 	padding: 15px;
 }
 
