16/12/07 top_header.jspf update

--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -47,7 +47,7 @@ $('#btnLogin').click(function() {
 });
 
 $('#btnAdministrator').click(function() {
-	location = '/project03/admin';
+	location = '/project03/admin/admin';
 });
 
 $('#btnMypage').click(function() {
