--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -29,7 +29,7 @@
 			<c:if test="${not empty login_id }">
 				<%-- 세션에 로그인 정보가 있는 경우 --%>
 				<c:if test="${authority == 3 }">
-					<button id="btnAdministrator">관리자</button>
+					<button id="btnAdministrator" style="height: 40%;">관리자</button>
 				</c:if>
 				<button id="btnMypage" style="height: 40%;">마이페이지</button>		
 				<button id="btnLogout" style="height: 40%;">로그아웃</button><br/>
@@ -51,7 +51,7 @@ $('#btnAdministrator').click(function() {
 });
 
 $('#btnMypage').click(function() {
-	location = '/project03/MyPage';
+	location = '/project03/mypage/MyPage';
 });	
 
 $('#btnLogout').click(function() {
