16/12/08 Daeho login interceptor update

--- a/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
+++ b/Project03/src/main/webapp/WEB-INF/views/top_header.jspf
@@ -43,7 +43,7 @@ $('#btnMemberRegister').click(function() {
 });
 
 $('#btnLogin').click(function() {
-	location = '/project03/member/login';
+	location = '/project03/member/login?url=' + location.href;
 });
 
 $('#btnAdministrator').click(function() {
